# governance-program-library

./: Anchor.toml  Cargo.toml  package.json
.devcontainer/: Dockerfile
.github/workflows/: lint-test.yaml  sbf-test.yaml
lib/shared/: Cargo.toml
programs/bonk-plugin/: Cargo.toml
programs/bonk-plugin/src/state/: registrar.rs  voter_weight_record.rs
programs/bonk-plugin/tests/program_test/: governance_test.rs  program_test_bench.rs
programs/core-attribute-voter/: Cargo.toml  README.md
programs/core-attribute-voter/src/: error.rs  lib.rs
programs/core-attribute-voter/src/instructions/: cast_nft_vote.rs  configure_collection.rs  create_registrar.rs  relinquish_nft_vote.rs  update_max_voter_weight_record.rs  update_voter_weight_record.rs
programs/core-attribute-voter/src/state/: collection_config.rs  max_voter_weight_record.rs  nft_vote_record.rs  registrar.rs  voter_weight_record.rs
programs/core-attribute-voter/tests/: cast_nft_vote.rs  configure_collection.rs  create_registrar.rs  relinquish_nft_vote.rs  update_max_voter_weight_record.rs  update_voter_weight_record.rs
programs/core-attribute-voter/tests/program_test/: core_test.rs  core_voter_test.rs  program_test_bench.rs  tools.rs
programs/core-voter/: Cargo.toml
programs/core-voter/src/: error.rs  lib.rs
programs/core-voter/src/instructions/: cast_nft_vote.rs  update_voter_weight_record.rs
programs/core-voter/src/state/: nft_vote_record.rs  registrar.rs
programs/core-voter/tests/: cast_nft_vote.rs  update_voter_weight_record.rs
programs/core-voter/tests/program_test/: core_test.rs  core_voter_test.rs  governance_test.rs
programs/dual-token-voter/: Cargo.toml
programs/dual-token-voter/src/: error.rs  lib.rs
programs/dual-token-voter/src/instructions/: create_exchange_rate_snapshot.rs  create_registrar.rs  create_voter_weight_record.rs  deposit.rs  mod.rs  update_voter_weight_record.rs  withdraw.rs
programs/dual-token-voter/src/orca/: exchange_rate_calculator.rs  mod.rs
programs/dual-token-voter/src/orca/manager/: fee_rate_manager.rs  liquidity_manager.rs  mod.rs  swap_manager.rs  tick_manager.rs  whirlpool_manager.rs
programs/dual-token-voter/src/orca/math/: bit_math.rs  liquidity_math.rs  mod.rs  swap_math.rs  tick_math.rs  token_math.rs  u256_math.rs
programs/dual-token-voter/src/orca/state/: fixed_tick_array.rs  mod.rs  oracle.rs  tick.rs  tick_array.rs  whirlpool.rs  zeroed_tick_array.rs
programs/dual-token-voter/src/orca/util/: mod.rs  sparse_swap.rs  swap_tick_sequence.rs
programs/dual-token-voter/src/state/: exchange_rate_snapshot.rs  mod.rs  registrar.rs  voter.rs  voter_weight_record.rs
programs/nft-voter/: Cargo.toml  README.md
programs/nft-voter/src/: error.rs  lib.rs
programs/nft-voter/src/instructions/: cast_nft_vote_sponsored.rs  create_sponsor.rs  mod.rs  relinquish_nft_vote_sponsored.rs  withdraw_sponsor.rs
programs/nft-voter/src/state/: idl_types.rs  mod.rs  nft_vote_record.rs  nft_vote_record_sponsored.rs  registrar.rs  sponsor.rs
programs/nft-voter/src/tools/: account.rs  mod.rs
programs/nft-voter/tests/: cast_nft_vote_sponsored.rs  create_sponsor.rs  relinquish_nft_vote_sponsored.rs  withdraw_sponsor.rs
programs/nft-voter/tests/program_test/: nft_voter_test.rs
programs/quadratic/tests/program_test/: governance_test.rs  program_test_bench.rs
programs/realm-voter/: Cargo.toml
programs/realm-voter/src/state/: registrar.rs
programs/realm-voter/tests/program_test/: governance_test.rs  program_test_bench.rs
programs/snapshot-voter/: Cargo.toml  README.md
programs/snapshot-voter/src/: error.rs  governance.rs  lib.rs
programs/snapshot-voter/src/instructions/: create_max_voter_weight_record.rs  create_registrar.rs  mod.rs  update_registrar.rs  update_voter_weight_record.rs
programs/snapshot-voter/src/state/: mod.rs  registrar.rs
programs/snapshot-voter/src/tools/: merkle.rs
programs/snapshot-voter/tests/: create_max_voter_weight_record.rs  create_registrar.rs  create_voter_weight_record.rs  update_voter_weight_record.rs
programs/snapshot-voter/tests/program_test/: mod.rs  snapshot_voter_test.rs  tools.rs
programs/token-haver/: Cargo.toml
programs/token-haver/src/state/: registrar.rs
programs/token-voter/: Cargo.toml
programs/token-voter/src/: governance.rs
programs/token-voter/src/state/: registrar.rs  voter.rs
programs/token-voter/src/tools/: spl_token.rs
programs/token-voter/tests/: cast_token_vote.rs  configure_voter_weights.rs  deposit.rs  withdraw.rs
programs/token-voter/tests/program_test/: governance_test.rs  program_test_bench.rs  token_voter_test.rs
