[package]
name = "gpl-shared"
version = "0.1.1"
description = "SPL Governance plugin shared code"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["lib"]
name = "gpl_shared"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
enum_dispatch = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
spl-governance = { workspace = true, features = ["no-entrypoint"] }
spl-governance-tools = { workspace = true }
spl-governance-addin-api = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }

[dev-dependencies]

[lints]
workspace = true
