[package]
name = "gpl-core-voter"
version = "0.2.2"
description = "SPL Governance addin implementing Metaplex Core NFT Asset based governance"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_core_voter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
arrayref = { workspace = true }
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true, features = ["token"] }
itertools = { workspace = true }
mpl-token-metadata = { workspace = true }
mpl-core = { workspace = true, features = ["anchor"] }
spl-governance = { workspace = true, features = ["no-entrypoint"] }
spl-governance-tools = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }
borsh_1 = { workspace = true }

[dev-dependencies]
borsh = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-program-test = { workspace = true }

[lints]
workspace = true
