[package]
name = "gpl-dual-token-voter"
version = "0.1.0"
description = "SPL Governance plugin for dual token voting with exchange rate support"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_dual_token_voter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
arrayref = "0.3.7"
spl-governance = { version = "4.0.0", features = ["no-entrypoint"] }
spl-governance-tools = "0.1.4"
spl-governance-addin-api = "0.1.4"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "3.0.4", features = ["no-entrypoint"] }
gpl-shared = { version = "0.1.1", path = "../shared" }
bytemuck = "1.14"
bitflags = "2.4"

[dev-dependencies]
borsh = "0.10.3"
spl-associated-token-account = { version = "^3.0.2", features = ["no-entrypoint"] }
solana-sdk = "1.18.18"
solana-program-test = "1.18.18"
