[package]
name = "gpl-realm-voter"
version = "0.0.1"
description = "SPL Governance plugin granting governance power through Realms membership"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_realm_voter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
arrayref = { workspace = true }
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-governance = { workspace = true, features = ["no-entrypoint"] }
spl-governance-tools = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }

[dev-dependencies]
borsh = { workspace = true }
borsh_1 = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-program-test = { workspace = true }

[lints]
workspace = true
