[package]
name = "gpl-token-haver"
version = "0.0.2"
description = "SPL Governance plugin granting governance power based on the nonzero presence of locked tokens"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_token_haver"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
arrayref = { workspace = true }
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-governance = { workspace = true, features = ["no-entrypoint"] }
spl-governance-tools = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }

# tests are incomplete
# [dev-dependencies]
# borsh = { workspace = true }
# solana-sdk = { workspace = true }
# solana-program-test = { workspace = true }

[lints]
workspace = true
