[package]
name = "gpl-token-voter"
version = "0.0.1"
description = "SPL Governance plugin implementing token based governance power"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "gpl_token_voter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
arrayref = { workspace = true }
spl-governance = { workspace = true, features = ["no-entrypoint"] }
spl-governance-tools = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }
ahash = { workspace = true }
static_assertions = { workspace = true }
spl-governance-addin-api = { workspace = true }
borsh_1 = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
spl-token-2022 = { workspace = true }
solana-zk-sdk = { workspace = true }
solana-instruction = { workspace = true }

[dev-dependencies]
borsh = { workspace = true }
solana-program = { workspace = true }
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] }
solana-sdk = { workspace = true }
solana-program-test = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
spl-token-client = { workspace = true }

[lints]
workspace = true
